--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ava": "^6.0.1"
   },
   "ava": {
-    "timeout": "3m"
+    "timeout": "3m",
+    "workerThreads": false
   },
   "engines": {
     "node": ">= 10"
